[package]
name = "vlrx"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.99"
env_logger = "0.10.0"
log = "0.4.19"
clap = { version = "4.3.9", features = ["derive"] }
regex = "1.8.4"
